[REST] Publish quiz handler.
