# docs/swagger.json
@@ -91,7 +91,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "This endpoint will delete a quiz with the provided Test ID if it was created by the requester.",
+                "description": "This endpoint will mark a quiz as delete if it was created by the requester. The provided Test ID is provided is a path parameter.",
                 "consumes": [
                     "application/json"
                 ],
@@ -135,7 +135,7 @@
             }
         },
         "/quiz/publish/{quiz_id}": {
-            "put": {
+            "patch": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -169,13 +169,7 @@
                             "$ref": "#/definitions/model_rest.Success"
                         }
                     },
-                    "401": {
-                        "description": "Error message with any available details in payload",
-                        "schema": {
-                            "$ref": "#/definitions/model_rest.Error"
-                        }
-                    },
-                    "404": {
+                    "403": {
                         "description": "Error message with any available details in payload",
                         "schema": {
                             "$ref": "#/definitions/model_rest.Error"
